Remove overflow which suddenly started causing scrollbar issues (after three years!??)

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -338,7 +338,6 @@ strong {
 
 @media (min-width: 918px) {
     .gigs {
-        overflow: auto;
         dt {
             margin-top: 5px;
             float: left;
